include/El/core/DistMatrix.h

typedef const struct ElDistMatrix_iDummy* ElConstDistMatrix_i;
typedef const struct ElDistMatrix_sDummy* ElConstDistMatrix_s;
typedef const struct ElDistMatrix_dDummy* ElConstDistMatrix_d;
typedef const struct ElDistMatrix_cDummy* ElConstDistMatrix_c;
typedef const struct ElDistMatrix_zDummy* ElConstDistMatrix_z;
/* int AbstractDistMatrix<T>::ColRank() const
   ------------------------------------------ */
EL_EXPORT ElError ElDistMatrixColRank_i( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixColRank_s( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixColRank_d( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixColRank_c( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixColRank_z( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::RowRank() const
   ------------------------------------------ */
EL_EXPORT ElError ElDistMatrixRowRank_i( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixRowRank_s( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixRowRank_d( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixRowRank_c( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixRowRank_z( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::PartialColRank() const
   ------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialColRank_i
( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialColRank_s
( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialColRank_d
( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialColRank_c
( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialColRank_z
( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::PartialRowRank() const
   ------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialRowRank_i
( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialRowRank_s
( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialRowRank_d
( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialRowRank_c
( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialRowRank_z
( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::PartialUnionColRank() const
   ------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixPartialUnionColRank_i
( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionColRank_s
( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionColRank_d
( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionColRank_c
( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionColRank_z
( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::PartialUnionRowRank() const
   ------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixPartialUnionRowRank_i
( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionRowRank_s
( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionRowRank_d
( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionRowRank_c
( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixPartialUnionRowRank_z
( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::DistRank() const
   ------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDistRank_i
( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixDistRank_s
( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixDistRank_d
( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixDistRank_c
( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixDistRank_z
( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::CrossRank() const
   -------------------------------------------- */
EL_EXPORT ElError ElDistMatrixCrossRank_i( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixCrossRank_s( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixCrossRank_d( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixCrossRank_c( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixCrossRank_z( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::RedundantRank() const
   ------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixRedundantRank_i
( ElConstDistMatrix_i A, int* rank );
EL_EXPORT ElError ElDistMatrixRedundantRank_s
( ElConstDistMatrix_s A, int* rank );
EL_EXPORT ElError ElDistMatrixRedundantRank_d
( ElConstDistMatrix_d A, int* rank );
EL_EXPORT ElError ElDistMatrixRedundantRank_c
( ElConstDistMatrix_c A, int* rank );
EL_EXPORT ElError ElDistMatrixRedundantRank_z
( ElConstDistMatrix_z A, int* rank );
/* int AbstractDistMatrix<T>::Root() const
   --------------------------------------- */
EL_EXPORT ElError ElDistMatrixRoot_i( ElConstDistMatrix_i A, int* root );
EL_EXPORT ElError ElDistMatrixRoot_s( ElConstDistMatrix_s A, int* root );
EL_EXPORT ElError ElDistMatrixRoot_d( ElConstDistMatrix_d A, int* root );
EL_EXPORT ElError ElDistMatrixRoot_c( ElConstDistMatrix_c A, int* root );
EL_EXPORT ElError ElDistMatrixRoot_z( ElConstDistMatrix_z A, int* root );
/* bool AbstractDistMatrix<T>::Participating() const
   ------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixParticipating_i
( ElConstDistMatrix_i A, bool* participating );
EL_EXPORT ElError ElDistMatrixParticipating_s
( ElConstDistMatrix_s A, bool* participating );
EL_EXPORT ElError ElDistMatrixParticipating_d
( ElConstDistMatrix_d A, bool* participating );
EL_EXPORT ElError ElDistMatrixParticipating_c
( ElConstDistMatrix_c A, bool* participating );
EL_EXPORT ElError ElDistMatrixParticipating_z
( ElConstDistMatrix_z A, bool* participating );
/* int AbstractDistMatrix<T>::RowOwner( Int i ) const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixRowOwner_i
( ElConstDistMatrix_i A, ElInt i, int* rowOwner );
EL_EXPORT ElError ElDistMatrixRowOwner_s
( ElConstDistMatrix_s A, ElInt i, int* rowOwner );
EL_EXPORT ElError ElDistMatrixRowOwner_d
( ElConstDistMatrix_d A, ElInt i, int* rowOwner );
EL_EXPORT ElError ElDistMatrixRowOwner_c
( ElConstDistMatrix_c A, ElInt i, int* rowOwner );
EL_EXPORT ElError ElDistMatrixRowOwner_z
( ElConstDistMatrix_z A, ElInt i, int* rowOwner );
/* int AbstractDistMatrix<T>::ColOwner( Int j ) const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixColOwner_i
( ElConstDistMatrix_i A, ElInt j, int* colOwner );
EL_EXPORT ElError ElDistMatrixColOwner_s
( ElConstDistMatrix_s A, ElInt j, int* colOwner );
EL_EXPORT ElError ElDistMatrixColOwner_d
( ElConstDistMatrix_d A, ElInt j, int* colOwner );
EL_EXPORT ElError ElDistMatrixColOwner_c
( ElConstDistMatrix_c A, ElInt j, int* colOwner );
EL_EXPORT ElError ElDistMatrixColOwner_z
( ElConstDistMatrix_z A, ElInt j, int* colOwner );
/* int AbstractDistMatrix<T>::Owner( Int i, Int j ) const
   ------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixOwner_i
( ElConstDistMatrix_i A, ElInt i, ElInt j, int* owner );
EL_EXPORT ElError ElDistMatrixOwner_s
( ElConstDistMatrix_s A, ElInt i, ElInt j, int* owner );
EL_EXPORT ElError ElDistMatrixOwner_d
( ElConstDistMatrix_d A, ElInt i, ElInt j, int* owner );
EL_EXPORT ElError ElDistMatrixOwner_c
( ElConstDistMatrix_c A, ElInt i, ElInt j, int* owner );
EL_EXPORT ElError ElDistMatrixOwner_z
( ElConstDistMatrix_z A, ElInt i, ElInt j, int* owner );
/* Int AbstractDistMatrix<T>::LocalRow( Int i ) const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLocalRow_i
( ElConstDistMatrix_i A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRow_s
( ElConstDistMatrix_s A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRow_d
( ElConstDistMatrix_d A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRow_c
( ElConstDistMatrix_c A, ElInt i, ElInt* iLoc );
EL_EXPORT ElError ElDistMatrixLocalRow_z
( ElConstDistMatrix_z A, ElInt i, ElInt* iLoc );
/* Int AbstractDistMatrix<T>::LocalCol( Int j ) const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLocalCol_i
( ElConstDistMatrix_i A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalCol_s
( ElConstDistMatrix_s A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalCol_d
( ElConstDistMatrix_d A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalCol_c
( ElConstDistMatrix_c A, ElInt j, ElInt* jLoc );
EL_EXPORT ElError ElDistMatrixLocalCol_z
( ElConstDistMatrix_z A, ElInt j, ElInt* jLoc );