python/core/DistMatrix.py


  # Return this process's column rank
  # ---------------------------------
  lib.ElDistMatrixColRank_i.argtypes = \
  lib.ElDistMatrixColRank_s.argtypes = \
  lib.ElDistMatrixColRank_d.argtypes = \
  lib.ElDistMatrixColRank_c.argtypes = \
  lib.ElDistMatrixColRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def ColRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixColRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixColRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixColRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixColRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixColRank_z(*args)
    else: DataExcept()
    return rank.value

  # Return this process's row rank
  # ------------------------------
  lib.ElDistMatrixRowRank_i.argtypes = \
  lib.ElDistMatrixRowRank_s.argtypes = \
  lib.ElDistMatrixRowRank_d.argtypes = \
  lib.ElDistMatrixRowRank_c.argtypes = \
  lib.ElDistMatrixRowRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def RowRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixRowRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRowRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRowRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRowRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRowRank_z(*args)
    else: DataExcept()
    return rank.value

  # Return this process's partial column rank
  # -----------------------------------------
  lib.ElDistMatrixPartialColRank_i.argtypes = \
  lib.ElDistMatrixPartialColRank_s.argtypes = \
  lib.ElDistMatrixPartialColRank_d.argtypes = \
  lib.ElDistMatrixPartialColRank_c.argtypes = \
  lib.ElDistMatrixPartialColRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialColRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixPartialColRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialColRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialColRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialColRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialColRank_z(*args)
    else: DataExcept()
    return rank.value

  # Return this process's partial row rank
  # --------------------------------------
  lib.ElDistMatrixPartialRowRank_i.argtypes = \
  lib.ElDistMatrixPartialRowRank_s.argtypes = \
  lib.ElDistMatrixPartialRowRank_d.argtypes = \
  lib.ElDistMatrixPartialRowRank_c.argtypes = \
  lib.ElDistMatrixPartialRowRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialRowRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixPartialRowRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialRowRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialRowRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialRowRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialRowRank_z(*args)
    else: DataExcept()
    return rank.value

  # Return this process's partial union column rank
  # -----------------------------------------------
  lib.ElDistMatrixPartialUnionColRank_i.argtypes = \
  lib.ElDistMatrixPartialUnionColRank_s.argtypes = \
  lib.ElDistMatrixPartialUnionColRank_d.argtypes = \
  lib.ElDistMatrixPartialUnionColRank_c.argtypes = \
  lib.ElDistMatrixPartialUnionColRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialUnionColRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixPartialUnionColRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialUnionColRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialUnionColRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialUnionColRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialUnionColRank_z(*args)
    else: DataExcept()
    return rank.value

  # Return this process's partial union row rank
  # --------------------------------------------
  lib.ElDistMatrixPartialUnionRowRank_i.argtypes = \
  lib.ElDistMatrixPartialUnionRowRank_s.argtypes = \
  lib.ElDistMatrixPartialUnionRowRank_d.argtypes = \
  lib.ElDistMatrixPartialUnionRowRank_c.argtypes = \
  lib.ElDistMatrixPartialUnionRowRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialUnionRowRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixPartialUnionRowRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialUnionRowRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialUnionRowRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialUnionRowRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialUnionRowRank_z(*args)
    else: DataExcept()
    return rank.value

  # Return this process's rank in the distribution communicator
  # -----------------------------------------------------------
  lib.ElDistMatrixDistRank_i.argtypes = \
  lib.ElDistMatrixDistRank_s.argtypes = \
  lib.ElDistMatrixDistRank_d.argtypes = \
  lib.ElDistMatrixDistRank_c.argtypes = \
  lib.ElDistMatrixDistRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def DistRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixDistRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDistRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDistRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDistRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDistRank_z(*args)
    else: DataExcept()
    return rank.value

  # HERE
  lib.ElDistMatrixCrossRank_i.argtypes = \
  lib.ElDistMatrixCrossRank_s.argtypes = \
  lib.ElDistMatrixCrossRank_d.argtypes = \
  lib.ElDistMatrixCrossRank_c.argtypes = \
  lib.ElDistMatrixCrossRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def CrossRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixCrossRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixCrossRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixCrossRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixCrossRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixCrossRank_z(*args)
    else: DataExcept()
    return rank.value

  lib.ElDistMatrixRedundantRank_i.argtypes = \
  lib.ElDistMatrixRedundantRank_s.argtypes = \
  lib.ElDistMatrixRedundantRank_d.argtypes = \
  lib.ElDistMatrixRedundantRank_c.argtypes = \
  lib.ElDistMatrixRedundantRank_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def RedundantRank(self):
    rank = c_int()
    args = [self.obj,pointer(rank)]
    if   self.tag == iTag: lib.ElDistMatrixRedundantRank_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRedundantRank_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRedundantRank_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRedundantRank_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRedundantRank_z(*args)
    else: DataExcept()
    return rank.value

  lib.ElDistMatrixRoot_i.argtypes = \
  lib.ElDistMatrixRoot_s.argtypes = \
  lib.ElDistMatrixRoot_d.argtypes = \
  lib.ElDistMatrixRoot_c.argtypes = \
  lib.ElDistMatrixRoot_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def Root(self):
    root = c_int()
    args = [self.obj,pointer(root)]
    if   self.tag == iTag: lib.ElDistMatrixRoot_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRoot_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRoot_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRoot_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRoot_z(*args)
    else: DataExcept()
    return root.value

  lib.ElDistMatrixParticipating_i.argtypes = \
  lib.ElDistMatrixParticipating_s.argtypes = \
  lib.ElDistMatrixParticipating_d.argtypes = \
  lib.ElDistMatrixParticipating_c.argtypes = \
  lib.ElDistMatrixParticipating_z.argtypes = \
    [c_void_p,POINTER(bType)]
  def Participating(self):
    partic = bType()
    args = [self.obj,pointer(partic)]
    if   self.tag == iTag: lib.ElDistMatrixParticipating_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixParticipating_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixParticipating_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixParticipating_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixParticipating_z(*args)
    else: DataExcept()
    return partic.value

  lib.ElDistMatrixRowOwner_i.argtypes = \
  lib.ElDistMatrixRowOwner_s.argtypes = \
  lib.ElDistMatrixRowOwner_d.argtypes = \
  lib.ElDistMatrixRowOwner_c.argtypes = \
  lib.ElDistMatrixRowOwner_z.argtypes = \
    [c_void_p,iType,POINTER(c_int)]
  def RowOwner(self,i):
    owner = c_int()
    args = [self.obj,i,pointer(owner)]
    if   self.tag == iTag: lib.ElDistMatrixRowOwner_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRowOwner_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRowOwner_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRowOwner_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRowOwner_z(*args)
    else: DataExcept()
    return owner.value

  lib.ElDistMatrixColOwner_i.argtypes = \
  lib.ElDistMatrixColOwner_s.argtypes = \
  lib.ElDistMatrixColOwner_d.argtypes = \
  lib.ElDistMatrixColOwner_c.argtypes = \
  lib.ElDistMatrixColOwner_z.argtypes = \
    [c_void_p,iType,POINTER(c_int)]
  def ColOwner(self,j):
    owner = c_int()
    args = [self.obj,j,pointer(owner)]
    if   self.tag == iTag: lib.ElDistMatrixColOwner_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixColOwner_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixColOwner_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixColOwner_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixColOwner_z(*args)
    else: DataExcept()
    return owner.value

  lib.ElDistMatrixOwner_i.argtypes = \
  lib.ElDistMatrixOwner_s.argtypes = \
  lib.ElDistMatrixOwner_d.argtypes = \
  lib.ElDistMatrixOwner_c.argtypes = \
  lib.ElDistMatrixOwner_z.argtypes = \
    [c_void_p,iType,iType,POINTER(c_int)]
  def Owner(self,i,j):
    owner = c_int()
    args = [self.obj,i,j,pointer(owner)]
    if   self.tag == iTag: lib.ElDistMatrixOwner_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixOwner_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixOwner_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixOwner_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixOwner_z(*args)
    else: DataExcept()
    return owner.value

  lib.ElDistMatrixLocalRow_i.argtypes = \
  lib.ElDistMatrixLocalRow_s.argtypes = \
  lib.ElDistMatrixLocalRow_d.argtypes = \
  lib.ElDistMatrixLocalRow_c.argtypes = \
  lib.ElDistMatrixLocalRow_z.argtypes = \
    [c_void_p,iType,POINTER(iType)]
  def LocalRow(self,i):
    iLoc = iType()
    args = [self.obj,i,pointer(iLoc)]
    if   self.tag == iTag: lib.ElDistMatrixLocalRow_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLocalRow_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLocalRow_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLocalRow_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLocalRow_z(*args)
    else: DataExcept()
    return iLoc.value

  lib.ElDistMatrixLocalCol_i.argtypes = \
  lib.ElDistMatrixLocalCol_s.argtypes = \
  lib.ElDistMatrixLocalCol_d.argtypes = \
  lib.ElDistMatrixLocalCol_c.argtypes = \
  lib.ElDistMatrixLocalCol_z.argtypes = \
    [c_void_p,iType,POINTER(iType)]
  def LocalCol(self,j):
    jLoc = iType()
    args = [self.obj,j,pointer(jLoc)]
    if   self.tag == iTag: lib.ElDistMatrixLocalCol_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLocalCol_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLocalCol_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLocalCol_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLocalCol_z(*args)
    else: DataExcept()
    return jLoc.value
